# rsh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  client  rsh  rustfmt.toml
.github/workflows/: linux-nightly.yml  macos-nightly  macos-nightly.yml
src/: client.rs  main.rs  server.rs
src/rsh/: client.rs  server.rs
