[package]
name = "rsh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rsh"
path = "src/rsh/mod.rs"

[[bin]]
name = "rsh"
path = "src/main.rs"